# equity-factor-analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  start_web.sh
backend/: __init__.py  cache.py  cli.py  entities.py  errors.py  web.py
backend/analytics/: __init__.py  corr_radar.py  event_impact.py  factor_model.py  returns.py  sabr.py  vol_surface.py
backend/data_sources/: __init__.py  factors.py  macro_events.py  options.py  prices.py
backend/reporting/: __init__.py  charts.py  report.py
backend/templates/: base.html  react_index.html
data/: macro_events.csv  watchlists.yaml
frontend/templates/: index.html  react_index.html  report.html
tests/: __init__.py  test_corr_radar.py  test_event_impact.py  test_factor_model.py  test_prices.py  test_report.py  test_returns.py  test_sabr.py
